<resources>
    <string name="app_name">CRMNCC</string>
    <string name="buttonLogin">ACCEDI</string>
    <string name="hintMail">Mail</string>
    <string name="hintPassword">Password</string>
    <string name="descriptionLogo">Logo</string>
    <string name="passwordDimenticata">Password dimenticata?</string>
    <string name="nuovoServ">Nuovo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="headerBenvenuto">Benvenuto</string>
    <string name="headerNomeAzienda">NomeAzienda</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="optionServizi">Servizi</string>
    <string name="optionClienti">Clienti</string>
    <string name="optionAutisti">Autisti</string>
    <string name="optionMezzi">Mezzi</string>
    <string name="buttonLogout">Logout</string>
    <string name="buttonData">Scegli data</string>
    <string name="buttonIndietro">Indietro</string>
    <string name="buttonAvanti">Avanti</string>
    <string name="buttonAggiorna">Aggiorna</string>
    <string name="buttonElimina">Elimina</string>
    <string name="buttonEsporta">Esporta</string>
    <string name="buttonAnnulla">Annulla</string>
    <string name="buttonConferma">Conferma</string>
    <string name="buttonSelezione">Selezione</string>
    <string name="textAutista">Autista</string>
    <string name="textCliente">Cliente</string>
    <string name="textMezzo">Mezzo</string>
    <string name="textDestinazione">Destinazione</string>
    <string name="textImporto">Importo</string>
    <string name="textNrPasseggeri">Nr. passeggeri</string>
    <string name="textPartenza">Partenza</string>
    <string name="textPasseggero">Passeggero</string>
    <string name="textDataeOra">Data e ora:</string>
    <string name="buttonMappa">Apri in Google Maps</string>
</resources>