<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.servizi.ServiziFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutBarra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/barra_servizi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonIndietro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonIndietro"
            app:layout_constraintEnd_toStartOf="@+id/pickDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/pickDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonData"
            app:layout_constraintEnd_toStartOf="@+id/buttonAvanti"
            app:layout_constraintStart_toEndOf="@id/buttonIndietro"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="136dp" />

        <Button
            android:id="@+id/buttonAvanti"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonAvanti"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/pickDate"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewServizi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayoutBarra" />

</androidx.constraintlayout.widget.ConstraintLayout>