<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.auth.Login">

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="267dp"
        android:layout_height="297dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/descriptionLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ncctransferlogo" />

    <ProgressBar
        android:id="@+id/loadingCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/casellaMail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:startIconDrawable="@drawable/baseline_mail_24"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/casellaMailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/timberwolf"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hintMail"
            android:inputType="text|textEmailAddress"
            android:textColorHint="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/casellaPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/casellaMail"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/baseline_lock_24"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/casellaPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/timberwolf"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:hint="@string/hintPassword"
            android:inputType="text|textPassword"
            android:textColorHint="@android:color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="370dp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="115dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/oro"
        android:text="@string/buttonLogin"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/casellaPassword"
        app:strokeColor="@color/black"
        app:strokeWidth="2dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>